<resources>
    <string name="app_name">Android Labs</string>
    <string name="hello_message">Here are my widgets:</string>
    <string name="ButtonText">Button</string>
    <string name="CheckBox">Check this out!</string>
    <string name="On_Off">On / Off</string>
    <string name="hint_text">Type your answer here</string>
    <string name="string1">Go to chat</string>
    <string name="string2">Send</string>
    <string name="hint_string3">Type here</string>
    <string name="string4">Receive</string>
    <string name="msg">Click the button above to take a picture</string>
    <string name="picture">Your picture:</string>
    <string name="hint_email">Enter your email:</string>
    <string name="hint_password">Enter your password:</string>
    <string name="hint_title">Enter your email address:</string>
    <string name="Email">Your email:</string>
    <string name="hint_name">Enter your name</string>
    <string name="name">Your name</string>
    <string name="profile">Your profile</string>
    <string name="hint_login">Login</string>


</resources>
